productions/agentkit-cli/archives/0.46.7/en/quickstart.mdx
---
title: "Quickstart"
---

## Install

No Node.js required — one command installs the standalone binary and puts `agentkit` (and its alias `ak`) on your PATH:

<Tabs>
  <Tab title="wget">
    ```bash
    wget -qO- https://agentkit-cli.tos-cn-beijing.volces.com/install.sh | sh
    ```
  </Tab>
  <Tab title="curl">
    ```bash
    curl -fsSL https://agentkit-cli.tos-cn-beijing.volces.com/install.sh | sh
    ```
  </Tab>
</Tabs>

Verify the install:

```bash
agentkit --help
```

<Tip>
  The binary installs to `~/.agentkit`, with `agentkit` and `ak` symlinks in `~/.local/bin`. If the command isn't found, add `~/.local/bin` to your PATH. To install a specific version, set the `AGENTKIT_VERSION` environment variable (defaults to `latest`).
</Tip>

## Authentication

The CLI signs every Volcengine OpenAPI request. Provide credentials one of two ways:

<Tabs>
  <Tab title="AK/SK">
    Set these in your environment or a local `.env` (git-ignored):

    ```bash
    VOLCENGINE_ACCESS_KEY=...
    VOLCENGINE_SECRET_KEY=...
    VOLCENGINE_REGION=cn-beijing   # optional, defaults to cn-beijing
    ```
  </Tab>
  <Tab title="SSO">
    Browser login that stores short-lived STS credentials.

    ```bash
    agentkit login <sso-address>
    agentkit whoami
    ```
  </Tab>
</Tabs>

<Tip>
  SSO login currently supports only invoking (`invoke`) agents deployed on AgentKit Runtime. The cloud control-plane APIs can't yet identify or authenticate via SSO, so management commands — runtime, knowledge, memory, tool, and so on — still require AK/SK.
</Tip>

## Deploy in three steps

<Steps>
  <Step title="Scaffold a project">
    ```bash
    agentkit init my-agent -L python -t basic-agent
    cd my-agent
    ```
  </Step>
  <Step title="Build & deploy">
    ```bash
    agentkit deploy --name my-agent
    ```
  </Step>
  <Step title="Invoke the runtime">
    ```bash
    agentkit invoke my-agent -m "hello"
    ```
  </Step>
</Steps>

See the [command reference](/productions/agentkit-cli/archives/0.46.7/en/commands), or run `agentkit tree`
to print the command tree.
